--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,5 @@
 name: Java CI/CD com Maven e Selenium
 
-
 on:
   push:
     branches: ["main"]
@@ -9,31 +8,128 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-and-test:
+  # ===========================================================
+  # 1. AMBIENTE DE TESTES — Build + Testes Unitários, Fuzz, Resiliência
+  # ===========================================================
+  test-env:
+    name: Build + Testes (Unitários, Fuzz, Resiliência)
     runs-on: ubuntu-latest
 
     steps:
-
-
       - name: Checkout do código
         uses: actions/checkout@v4
 
-
-      - name: Configurar JDK
+      - name: Configurar Java 19
         uses: actions/setup-java@v4
         with:
-          java-version: '19'
-          distribution: 'temurin'
+          java-version: "19"
+          distribution: "temurin"
           cache: maven
 
+      - name: Instalar Google Chrome (para Selenium Headless)
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y google-chrome-stable
 
-      - name: Build e Testes com Maven
-        run: mvn clean install -Dheadless=true
+      - name: Rodar testes unitários, fuzz e resiliência
+        run: mvn clean test -Dheadless=true
 
-
-      - name: Publicar relatório de testes
+      - name: Publicar relatórios de teste
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: test-results
+          name: surefire-reports
           path: target/surefire-reports/
+
+      - name: Conclusão do job de testes
+        if: always()
+        run: echo "✔️ Testes do ambiente de QA finalizados."
+
+  # ===========================================================
+  # 2. AMBIENTE DE STAGING — Build e Testes E2E Selenium
+  # ===========================================================
+  staging:
+    name: Build + Testes End-to-End (Staging)
+    runs-on: ubuntu-latest
+    needs: test-env  # só roda se os testes anteriores passarem
+
+    env:
+      APP_ENV: staging
+      STAGING_URL: ${{ secrets.STAGING_URL }}
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Configurar Java
+        uses: actions/setup-java@v4
+        with:
+          java-version: "19"
+          distribution: "temurin"
+
+      - name: Instalar Google Chrome
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y google-chrome-stable
+
+      - name: Rodar testes E2E Selenium (headless)
+        run: mvn test -Dheadless=true -Dtest=FuncionarioE2ETest
+
+      - name: Publicar relatórios E2E
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: selenium-reports
+          path: target/surefire-reports/
+
+      - name: Log final
+        if: always()
+        run: echo "✔️ Testes E2E executados com sucesso no ambiente de staging."
+
+  # ===========================================================
+  # 3. AMBIENTE DE PRODUÇÃO — Build + Deploy (fictício/mocado)
+  # ===========================================================
+  prod:
+    name: Build + Deploy (Produção)
+    runs-on: ubuntu-latest
+    needs: staging  # só publica se staging passar 100%
+
+    if: startsWith(github.ref, 'refs/tags/v')  # deploy só em releases como v1.0.0
+
+    env:
+      APP_ENV: production
+      PROD_URL: ${{ secrets.PROD_URL }}
+      PROD_API_KEY: ${{ secrets.PROD_API_KEY }}
+
+    steps:
+      - name: Checkout código
+        uses: actions/checkout@v4
+
+      - name: Configurar Java
+        uses: actions/setup-java@v4
+        with:
+          java-version: "19"
+          distribution: "temurin"
+
+      - name: Build para produção
+        run: mvn -DskipTests package
+
+      - name: Deploy para Produção (Mock Seguro)
+        run: |
+          echo "🚀 Deploy iniciado para $PROD_URL ..."
+          curl -X GET "$PROD_URL/health" -H "Authorization: Bearer $PROD_API_KEY" || true
+
+      - name: Testes pós-deploy com Selenium
+        run: |
+          echo "🔍 Executando testes pós-deploy..."
+          mvn test -Dheadless=true -Dtest=FuncionarioE2ETest
+
+      - name: Publicar relatórios pós-deploy
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: post-deploy-selenium
+          path: target/surefire-reports/
+
+      - name: Conclusão do Deploy
+        run: echo "✔️ Deploy finalizado e validado com testes pós-deploy."
