ajuste do maven com java 19

--- a/pom.xml
+++ b/pom.xml
@@ -20,13 +20,12 @@
     <packaging>jar</packaging>
 
     <properties>
-        <!-- Você tinha 25, mantive. Se seu JDK for 17 ou 21, troca aqui -->
-         <java.version>25</java.version>
-         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-         <maven.compiler.source>19</maven.compiler.source>
-         <maven.compiler.target>19</maven.compiler.target>
-         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>19</maven.compiler.source>
+        <maven.compiler.target>19</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+
 
     <dependencies>
         <!-- API REST -->
@@ -99,6 +98,15 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.14.1</version>
+                <configuration>
+                    <source>${maven.compiler.source}</source>
+                    <target>${maven.compiler.target}</target>
+                </configuration>
             </plugin>
         </plugins>
     </build>
