--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -96,7 +96,7 @@ jobs:
   prod:
     name: Build + Deploy (Produção)
     runs-on: ubuntu-latest
-    needs: staging  # só publica se staging passar 100%
+    needs: staging
 
     if: startsWith(github.ref, 'refs/tags/v')  # deploy só em releases como v1.0.0
 
