--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,14 +3,12 @@ name: Java CI/CD com Maven e Selenium
 on:
   push:
     branches: ["main"]
-  pull_request:
-    branches: ["main"]
   workflow_dispatch:
 
 jobs:
-  # ===========================================================
-  # 1. AMBIENTE DE TESTES — Build + Testes Unitários, Fuzz, Resiliência.
-  # ===========================================================
+  # ============================================
+  # 1) Build + Testes (unitários, fuzz, resiliência)
+  # ============================================
   test-env:
     name: Build + Testes (Unitários, Fuzz, Resiliência)
     runs-on: ubuntu-latest
@@ -26,14 +24,15 @@ jobs:
           distribution: "temurin"
           cache: maven
 
-      - name: Instalar Google Chrome (para Selenium Headless)
+      - name: Instalar Google Chrome
         run: |
           sudo apt-get update
           sudo apt-get install -y google-chrome-stable
 
       - name: Rodar testes unitários, fuzz e resiliência (sem E2E)
-        run: mvn clean test -Dheadless=true -Dtest=FuncionarioTest,FuzzSecurityTest,FuncionarioFailEarlyTest,ControllerFailGracefullyTest,ResilienceTimeoutTest
-
+        run: |
+          mvn clean test -Dheadless=true \
+            -Dtest=FuncionarioTest,FuzzSecurityTest,FuncionarioFailEarlyTest,ControllerFailGracefullyTest,ResilienceTimeoutTest
 
       - name: Publicar relatórios de teste
         if: always()
@@ -46,14 +45,14 @@ jobs:
         if: always()
         run: echo "✔️ Testes do ambiente de QA finalizados."
 
-  # ===========================================================
-  # 2. AMBIENTE DE STAGING — Build e Testes E2E Selenium
-  # ===========================================================
+  # ============================================
+  # 2) Staging – Testes E2E com Selenium
+  # ============================================
   staging:
     name: Build + Testes End-to-End (Staging)
     runs-on: ubuntu-latest
     needs: test-env
-    
+
     env:
       APP_ENV: staging
       STAGING_URL: ${{ secrets.STAGING_URL }}
@@ -76,7 +75,7 @@ jobs:
       - name: Rodar testes E2E Selenium (headless)
         run: |
           echo "Rodando FuncionarioE2ETest (staging)..."
-          mvn test -Dheadless=true -Dtest=FuncionarioE2ETest || true  
+          mvn test -Dheadless=true -Dtest=FuncionarioE2ETest || true
 
       - name: Publicar relatórios E2E
         if: always()
@@ -87,18 +86,15 @@ jobs:
 
       - name: Log final
         if: always()
-        run: echo "✔️ Testes E2E executados."
+        run: echo "✔️ Testes E2E executados (falhas não derrubam o pipeline)."
 
-
-  # ===========================================================
-  # 3. AMBIENTE DE PRODUÇÃO — Build + Deploy (fictício/mocado)
-  # ===========================================================
+  # ============================================
+  # 3) Produção – Build + "Deploy" + testes pós-deploy
+  # ============================================
   prod:
     name: Build + Deploy (Produção)
     runs-on: ubuntu-latest
-    needs: staging
-
-    if: startsWith(github.ref, 'refs/tags/v')  # deploy só em releases como v1.0.0
+    needs: staging   # só roda depois do staging
 
     env:
       APP_ENV: production
@@ -126,7 +122,7 @@ jobs:
       - name: Testes pós-deploy com Selenium
         run: |
           echo "🔍 Executando testes pós-deploy..."
-          mvn test -Dheadless=true -Dtest=FuncionarioE2ETest || true  
+          mvn test -Dheadless=true -Dtest=FuncionarioE2ETest || true
 
       - name: Publicar relatórios pós-deploy
         if: always()
